0.9.0/_sources/gallery/set_theme.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/set_theme.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_set_theme.py:


Set theme
=========

Displays an image and sets the theme to 'light'.

.. tags:: gui

.. GENERATED FROM PYTHON SOURCE LINES 9-23



.. image-sg:: /gallery/images/sphx_glr_set_theme_001.png
   :alt: set theme
   :srcset: /gallery/images/sphx_glr_set_theme_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:49: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:49: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    from skimage import data

    import napari

    # create the viewer with an image
    viewer = napari.Viewer()
    layer = viewer.add_image(data.astronaut(), rgb=True, name='astronaut')

    # set the theme to 'light'
    viewer.theme = 'light'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_set_theme.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: set_theme.ipynb <set_theme.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: set_theme.py <set_theme.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: set_theme.zip <set_theme.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
